Real-IP from docker-compose fix

--- a/rootfs/tpls/etc/nginx/nginx.conf
+++ b/rootfs/tpls/etc/nginx/nginx.conf
@@ -127,6 +127,7 @@ http {
             fastcgi_param SERVER_SOFTWARE "";
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             fastcgi_param PATH_INFO $path_info;
+            fastcgi_param REMOTE_ADDR $http_x_real_ip;
             fastcgi_index index.php;
             fastcgi_pass unix:/var/run/php-fpm/php-fpm7.sock;
             fastcgi_buffers 256 4k;
