--- a/rootfs/tpls/etc/supervisord.conf
+++ b/rootfs/tpls/etc/supervisord.conf
@@ -5,7 +5,7 @@ file=/run/supervisord.sock
 logfile=/var/log/supervisord.log
 
 [rpcinterace:supervisor]
-supervisor.rpcinterace_factory = supervisor.rpcinterace.make_main_rpcinterface
+supervisor.rpcinterface_factory = supervisor.rpcinterface.make_main_rpcinterface
 
 [supervisorctl]
 serverurl=unix:///run/supervisord.sock
