--- a/rootfs/tpls/etc/supervisord.conf
+++ b/rootfs/tpls/etc/supervisord.conf
@@ -4,8 +4,8 @@ file=/run/supervisord.sock
 [supervisord]
 logfile=/var/log/supervisord.log
 
-[rpcinterace:supervisor]
-supervisor.rpcinterface_factory = supervisor.rpcinterface.make_main_rpcinterface
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
 serverurl=unix:///run/supervisord.sock
